# phl-workshop

./: .gitignore  README.md  myst.yml  pyproject.toml
.github/workflows/: update-pinned-env.yaml
envs/: environment.yaml  linux-64.lock.yaml  osx-64.lock.yaml  osx-arm64.lock.yaml  win-64.lock.yaml
phl/: 01-python.ipynb  02-pandas.ipynb  04-pypsa-uc.ipynb  05-pypsa-planning.ipynb  07-pypsa-scenarios.ipynb  08-pypsa-stochastic.ipynb  intro.md  phl-network-preparation.ipynb  setup.md
