[project]
name = "phl-workshop"
version = "2026.03.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy",
    "pandas>=2,<3",
    "netcdf4",
    "pypsa[excel]>=1.1",
    "ipython",
    "jupyterlab",
    "tabula-py",
    "xlrd",
    "lxml",
    "tables",
    "pyxlsb",
    "openpyxl",
    "pyepsg",
    "cartopy>=0.22",
    "matplotlib>=3.9",
    "plotly<6",
    "jupyter-book>=2",
    "ghp-import",
    "highspy>=1.5.3",
    "folium",
    "mapclassify",
    "pyarrow",
    "numba",
    "pre-commit",
    "gurobipy",
    "scipy",
    "tsam",
]
